Version 6.1.6
- Implemented flush() for FATFS files (thanks to Ada)
- Improved some error messages
- In C++ output, treat unknown types in prints as generic

Version 6.1.5
- Added warning about deleting unused user CORDIC instructions
- Fixed a bug in handling of (*X++) ^= N
- Fixed a bug when inlining functions with small local arrays

Version 6.1.4
- Fixed incorrect paths in libc.a

Version 6.1.3
- Allowed -I directives in .fpide files
- Fixed incorrect macro definitions in .fpide files
- Fixed a number of places where incorrect line numbers were used for errors
- Fixed an incorrect partially applied loop optimization
- Fixed language type used for BASIC main program when mixed languages are in use
- Improved handling of .. and . in C library
- Reduced register requirements for inlined functions
- Reduced some C/BASIC file I/O incompatibilities

Version 6.1.2
- Added files included by FILE directive to .zip files
- Fixed an optimizer bug around the P1 PHSx registers
- Fixed incorrect constant optimization of inline assembly (caught by Ada Gottensträter)
- Fixed some missing optimizations when -l was enabled
- Fixed incorrect assembly output for files not ending in newline when -l is on
- Fixed final value of loop variables after loop is transformed to djnz
- Fixed PTRx offsetting in C inline asm
- Fixed bugs in ELSE conditional assembly parsing.
- Implemented __builtin_expect (thanks, Ada!)
- Several additional optimizations contributed by Ada
- Skip symbol resolution when outputting .o files, fixes some output bugs
- Made object constant override expressions be evaluated in the parent object
- Minor optimization for expressions like 2*x

Version 6.1.1
- Added special -D_XTLFREQ=x and -D_XINFREQ=x command line defines
- Fixed IF in assembly debug
- Fixed constant SIGNX evaluation
- Made the preprocessor ignore characters after a line comment start (like ')
- Made jmp relative calculations act more like the official compiler